--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,7 +139,8 @@
     <string name="itemlblVeterinario">Veterinario:</string>
     <string name="itemlblMascota">Boby</string>
     <string name="itemlblSede">Sede:</string>
-    <string name="itemlblFecha">Fecha y hora:</string>
+    <string name="itemlblFecha">Fecha:</string>
+    <string name="itemlblHora">Hora:</string>
     <string name="lblMisCitasTitulo">Mis Citas</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
