modif en perfil mascota

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,13 +113,14 @@
     <string name="perNombMascota1">Max</string>
     <string name="perNombMascota2">Wilson</string>
 
-    <!--Mascota-->
+    <!--Perfil Mascota-->
     <string name="mascLblPerfilMascota">Información de la mascota</string>
     <string name="mascDescIconoMascota">Icono mascota</string>
     <string name="mascDescIconoEditar">Icono editar</string>
     <string name="mascTxtNombreMascota">Nombre</string>
-    <string name="mascTxtEdadMascota">Edad</string>
-    <string name="mascTipoMascota">Seleccione un tipo</string>
+    <string name="mascTxtEdadAniosMascota">Edad años</string>
+    <string name="mascTxtEdadMesesMascota">Edad meses</string>
+    <string name="mascTxtTipoMascota">Tipo</string>
     <string name="mascTxtRazaMascota">Raza</string>
 
     <!--Agregar Mascota-->
